Fix footer alignment, body font-size

--- a/sources/src/main/resources/META-INF/resources/styles.css
+++ b/sources/src/main/resources/META-INF/resources/styles.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto;
+    font-size: 13px;
     --mdc-typography-body2-font-size: 13px;
     --mdc-typography-subtitle1-font-size: 14px;
     --mdc-typography-subtitle2-font-size: 13px;
@@ -86,8 +87,7 @@ a {
     background-color: #fefefe;
     font-size: 12px;
     display: flex;
-    padding: 32px 16px;
-    margin-left: 10px;
+    padding: 32px 20px;
     color: #9e9e9e;
 }
     
